tests/miniJava/neg/006736_mutation.MiniJava
class java { public while static void Main ( String [ ] java ) { { } } }
